add cards to diary list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="go_back">go back</string>
     <string name="name_for_the_diary">name for the diary</string>
     <string name="let_s_go">let\'s go!</string>
+    <string name="your_diaries">your diaries</string>
+    <string name="open">open</string>
 </resources>
