--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="let_s_go">let\'s go!</string>
     <string name="your_diaries">your diaries</string>
     <string name="open">open</string>
+    <string name="snaps">snaps</string>
+    <string name="diary">diary</string>
 </resources>
