--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="capture_video_for_your_snap">capture video for your snap</string>
     <string name="switch_cameras">switch cameras</string>
+    <string name="upload_your_snap">upload your snap</string>
+    <string name="upload_snap">upload snap</string>
 </resources>
